--- a/lang/tr.json
+++ b/lang/tr.json
@@ -40,7 +40,7 @@
         "ColumnActionsPerVisit": "Ziyaret Başına İşlem",
         "ColumnActionsPerVisitDocumentation": "Ziyaretler sırasında yapılan ortalama işlem sayısı (sayfa görüntüleme, site araması, indirme ve giden bağlantılar).",
         "ColumnAverageGenerationTime": "Ortalama üretilme süresi",
-        "ColumnViewsWithGenerationTime": "Üretilme süresi ile sayfa görüntüleme sayısı",
+        "ColumnViewsWithGenerationTime": "Üretilme süresi ile sayfa gösterimleri",
         "ColumnAverageGenerationTimeDocumentation": "Sayfanın üretilmesi için geçen ortalama süre. Bu ölçüt sunucunun web sayfasını üretme süresinin yanında ziyaretçinin üretilen sayfayı sunucudan kendi aygıtına indirme süresini de içerir. 'Ortalama üretilme süresi' düşük olduğunda ziyaretçileriniz daha hızlı bir web sitesi deneyimi yaşar!",
         "ColumnAverageTimeOnPage": "Sayfada geçirilen ortalama süre",
         "ColumnAverageTimeOnPageDocumentation": "Ziyaretçilerin bu sayfada ortalama kalış süresi (yalnız sayfada, tüm web sitesinde değil).",
@@ -48,7 +48,7 @@
         "ColumnSumTimeOnSite": "Web Sitesinde Geçirilen Toplam Süre",
         "ColumnAvgTimeOnSiteDocumentation": "Bir ziyaretin ortalama süresi.",
         "ColumnBounceRate": "Hemen Çıkma Oranı",
-        "ColumnBounceRateDocumentation": "Yalnız bir sayfa görüntülenmesi olan ziyaretlerin yüzdesi. Bu değer doğrudan giriş sayfasını görüntüledikten sonra web sitesinden ayrılan kullanıcıları gösterir.",
+        "ColumnBounceRateDocumentation": "Yalnız bir sayfa gösterimi olan ziyaretlerin yüzdesi. Bu değer doğrudan giriş sayfasını görüntüledikten sonra web sitesinden ayrılan kullanıcıları gösterir.",
         "ColumnBounces": "Hemen Çıkmalar",
         "RealTime": "Gerçek zamanlı",
         "ColumnBouncesDocumentation": "Bu sayfada başlayıp biten ziyaretlerin sayısı. Bu değer yalnız bu sayfayı görüntüledikten sonra web sitesinden ayrılan kullanıcıları gösterir.",
@@ -81,7 +81,7 @@
         "ColumnPercentageVisits": "%% Ziyaretler",
         "ColumnRevenue": "Gelir",
         "ColumnSumVisitLength": "Ziyaretçilerin geçirdiği toplam süre (saniye)",
-        "ColumnTotalPageviews": "Görüntülenen Sayfa Sayısı",
+        "ColumnTotalPageviews": "Sayfa Gösterimi Toplamı",
         "ColumnUniqueEntrances": "Tekil girişler",
         "ColumnUniqueExits": "Tekil çıkışlar",
         "ColumnUniquePageviews": "Tekil sayfa gösterimleri",
@@ -424,7 +424,7 @@
         "Totals": "Toplamlar",
         "TotalRatioTooltip": "Bu %1$s \/ %2$s %3$s tamamı %4$s içinde.",
         "TotalRevenue": "Toplam Gelir",
-        "TotalVisitsPageviewsActionsRevenue": "(Toplam: %1$s ziyaretçi, %2$s sayfa görüntüleme, %3$s işlem, %4$s gelir)",
+        "TotalVisitsPageviewsActionsRevenue": "(Toplam: %1$s ziyaretçi, %2$s sayfa gösterimi, %3$s işlem, %4$s gelir)",
         "TrackingScopeAction": "İşlem",
         "TrackingScopePage": "Sayfa",
         "TrackingScopeVisit": "Ziyaret",
