--- a/plugins/Actions/lang/tr.json
+++ b/plugins/Actions/lang/tr.json
@@ -30,8 +30,9 @@
         "ColumnUniqueClicksDocumentation": "Bu bağlantıyı tıklayan ziyaretçilerin sayısı. Bir bağlantı bir ziyarette birden çok kez tıklanmış ise yalnız bir kez sayılır.",
         "ColumnUniqueDownloads": "Tekil İndirmeler",
         "ColumnUniqueOutlinks": "Tekil Dış Bağlantılar",
-        "ColumnIdPageview": "Sayfa Görüntüleme Kodu",
+        "ColumnIdPageview": "Sayfa Gösterimi Kodu",
         "ColumnInteractionPosition": "Etkileşim Konumu",
+        "ColumnPageViewPosition": "Sayfa Gösterimi Konumu",
         "ActionsInVisit": "Ziyaret Sırasındaki İşlemler",
         "DownloadsReportDocumentation": "Bu rapor, ziyaretçilerinizin dosya indirme bilgileri bulunur. %s indirme bağlantısına tıklandığında Matomo indirme sayısını arttırır. İndirmenin tamamlanıp tamamlanmadığı Matomo tarafından bilinmez.",
         "EntryPagesReportDocumentation": "Bu rapor, belirtilen zaman aralığında kullanılan giriş sayfaları hakkında bilgi içerir. Bir giriş sayfası, kullanıcının ziyaretine başladığı ilk sayfadır. %s giriş adresleri bir klasör yapısı biçiminde görüntülenir.",
