--- a/plugins/DevicesDetection/lang/el.json
+++ b/plugins/DevicesDetection/lang/el.json
@@ -48,6 +48,7 @@
         "TV": "Τηλεόραση",
         "UserAgent": "Πρόγραμμα πελάτη χρήστη",
         "XVisitsFromDevices": "%1$s επισκέψεις από %2$s συσκευές",
+        "Wearable": "Φορέσιμος",
         "WidgetBrowsers": "Φυλλομετρητές επισκεπτών",
         "WidgetBrowsersDocumentation": "Αυτή η αναφορά περιέχει πληροφορίες για το φυλλομετρητή που χρησιμοποιούσαν οι επισκέπτες. Κάθε έκδοση φυλλομετρητή κατατάσσεται διαφορετικά."
     }
