--- a/plugins/GeoIp2/lang/el.json
+++ b/plugins/GeoIp2/lang/el.json
@@ -1,6 +1,8 @@
 {
     "GeoIp2": {
         "AssumingNonApache": "Αδύνατη η εύρεση της συνάρτησης apache_get_modules, υποθέτουμε ότι ο διακομιστής δεν είναι Apache.",
+        "AutomaticSetup": "Αυτόματη παραμετροποίηση γεωτοποθεσίας με χρήση βάσης dbip",
+        "AutomaticSetupDescription": "Για σωστή γεωτοποθεσία, το Matomo απαιτεί εξωτερική βάση δεδομένων. Με αυτή την επιλογή, το Matomo θα παραμετροποιηθεί αυτόματα να κατεβάζει και να χρησιμοποιεί την τελευταία βάση δεδομένων για πόλεις από το dbip. [%1$sΔείτε τους όρους χρήσης %2$s]",
         "CannotFindGeoIPDatabaseInArchive": "Δεν βρέθηκε έγκυρη βάση DBIP \/ GeoIP στο αρχείο tar %1$s!",
         "CannotFindGeoIPServerVar": "Η μεταβλητή %s δεν έχει οριστεί. Ο διακομιστής σας ενδέχεται να μην έχει παραμετροποιηθεί σωστά.",
         "CannotListContent": "Αδύνατη η δημιουργία λίστας του περιεχομένου για %1$s: %2$s",
