--- a/plugins/Transitions/lang/tr.json
+++ b/plugins/Transitions/lang/tr.json
@@ -5,7 +5,7 @@
         "Transitions": "Dönüşümler",
         "ErrorBack": "Önceki işleme dön",
         "ExitsInline": "%s çıkış",
-        "NumPageviews": "%s sayfa görüntüleme",
+        "NumPageviews": "%s sayfa gösterimi",
         "NumDownloads": "%s indirme",
         "NumOutlinks": "%s giden bağlantı",
         "TopX": "İlk %s etiket",
@@ -23,10 +23,10 @@
         "IncomingTraffic": "Gelen Trafik",
         "LoopsInline": "%s sayfa yüklemesi",
         "NoDataForAction": "%s için henüz bir veri yok",
-        "NoDataForActionDetails": "%s zaman aralığından işlem için hiç bir sayfa görüntülenmemiş ya da geçersiz.",
+        "NoDataForActionDetails": "%s zaman aralığından işlem için hiç bir sayfa gösterilmemiş ya da geçersiz.",
         "OutgoingTraffic": "Giden Trafik",
         "PluginDescription": "Bu rapor, işlem raporları bölümündeki yeni simgesi ile erişilebilen yeni geçiş raporunda her sayfa adresi için önceki ve sonraki işlemleri içerir.",
-        "ShareOfAllPageviews": "Bu sayfa %1$s kez görüntülenmiş (toplam sayfa görüntülemelerinden %2$s).",
+        "ShareOfAllPageviews": "Bu sayfa %1$s kez gösterilmiş (toplam sayfa gösterimi %2$s).",
         "ToFollowingPages": "İç Sayfalara",
         "ToFollowingPagesInline": "%s iç sayfalara",
         "ToFollowingSiteSearches": "İç Aramalar",
