--- a/plugins/GeoIp2/lang/tr.json
+++ b/plugins/GeoIp2/lang/tr.json
@@ -1,6 +1,8 @@
 {
     "GeoIp2": {
         "AssumingNonApache": "apache_get_modules işlevi bulunamadığı için web sunucusunun Apache olmadığı varsayılıyor.",
+        "AutomaticSetup": "Dbip veritabanı kullanan coğrafi konum özelliği otomatik olarak yapılandırılsın",
+        "AutomaticSetupDescription": "Coğrafi konumların doğru olarak belirlenebilmesi için Matomo uygulamasının bir dış veritabanı kullanması gerekir. Bu seçenek etkinleştirildiğinde, Matomo ilçe düzeyindeki güncel dbip veritabanını indirecek şekilde otomatik olarak yapılandırılır. [%1$sLisans koşullarına bakın%2$s]",
         "CannotFindGeoIPDatabaseInArchive": "%1$s tar arşivi dosyasında geçerli bir DB-IP \/ GeoIP veritabanı bulunamadı!",
         "CannotFindGeoIPServerVar": "%s değişkeni ayarlanmamış. Sunucunuz doğru yapılandırılmamış olabilir.",
         "CannotListContent": "%1$s: %2$s içeriği listelenemedi",
