--- a/plugins/PrivacyManager/lang/tr.json
+++ b/plugins/PrivacyManager/lang/tr.json
@@ -10,7 +10,7 @@
         "ConsentExplanation": "Onay sorma, kişilere kendi kişisel verilerinin nasıl işleneceğini seçme ve denetleme olanağı sunar.",
         "ClickHereSettings": "%s ayarlarına erişmek için buraya tıklayın.",
         "WhenDoINeedConsent": "Kullanıcı onayını ne zaman sormalıyım?",
-        "WhenConsentIsNeeded1": "GDPR kişisel gizlilik düzenlemeleri kapsamında, kişisel verileri işlerken, bazı durumlarda kullanıcılarınızın onayını istemeniz gerekir. Onay istemeniz gerekip gerekmediğini belirlemek için kişisel verilerin işlenmesine ilişkin yasal dayanağınızın \"Onay\" ya da \"Meşru menfaat\" olup olmadığını veya kişisel verilerin toplanmasından tamamen kaçınıp kaçınamayacağınızı belirlemeniz gerekir. Matomo için GDPR kapsamındaki yasal dayanak hakkında daha fazla bilgi edinmenizi öneririz.",
+        "WhenConsentIsNeeded1": "Genel Veri Koruma Yönetmeliği (GVKY, GDPR) kişisel gizlilik düzenlemeleri kapsamında, kişisel verileri işlerken, bazı durumlarda kullanıcılarınızın onayını istemeniz gerekir. Onay istemeniz gerekip gerekmediğini belirlemek için kişisel verilerin işlenmesine ilişkin yasal dayanağınızın \"Onay\" ya da \"Meşru menfaat\" olup olmadığını veya kişisel verilerin toplanmasından tamamen kaçınıp kaçınamayacağınızı belirlemeniz gerekir. Matomo için Genel Veri Koruma Yönetmeliği kapsamındaki yasal dayanak hakkında daha fazla bilgi edinmenizi öneririz.",
         "WhenConsentIsNeeded2": "Kullanıcılarınızın onayını almanız gerektiğinde ve geçmişte kullanıcılarınızın \"Onayını\" aldığınızı kanıtlayamıyorsanız, %1$sönceden izlediğiniz ham kullanıcı verilerini anonimleştirmeniz%2$s önerilir.",
         "HowDoIAskForConsent": "Kullanıcılardan nasıl onay isterim?",
         "AskForConsentFollowSteps": "Verilerinin Matomo tarafından işlenmesinden önce kullanıcılardan onay istemek için aşağıdaki adımları izleyin.",
@@ -48,10 +48,14 @@
         "AnonymizeLocation": "Konum Anonim Kılınsın",
         "AnonymizeLocationHelp": "Bu işlem geri alınamaz. Konum, anonim kılınmış IP adresine göre yeniden değerlendirilir (IP adresinin en az 2 baytı anonim kılınır).",
         "AnonymizeUserId": "Kullanıcı Kodu Sahte Kullanıcı Koduna Dönüştürülsün",
+        "AnonymizeUserIdHelp": "Bu seçenek etkinleştirildiğinde, Kullanıcı Kodu yerine bir sahte bir kod görüntülenerek, e-posta adresi gibi kişisel gizliliğin korunmasını engelleyebilecek bilgilerin görüntülenmesi ve kaydedilmesi engellenir. Teknik olarak Kullanıcı Kodu belirtildiğinde, Matomo karılmış bir işlev ile oluşturulmuş sahte kullanıcı kodunu kullanır.<br\/><br\/><em>Not: Sahte kod kullanılması anonim kılma ile aynı şey değildir. Genel Veri Koruma Yönetmeliği hükümlerine göre Sahte Kullanıcı Kodu da kişisel veri sayılır. Belirli verilere sahip olunması durumunda (yalnız Matomo ve veri işleyiciniz tarafından erişilebilen) Sahte Kullanıcı Kodu kullanılarak Gerçek Kullanıcı Kodu bulunabilir.<\/em>",
+        "AnonymizeProcessInfo": "Bu işlem uzun sürebileceğinden hemen yürütülmeyecek. İşlem durumunu aşağıda görebilirsiniz. Anonimleştirme işlemi genellikle bir saat içinde başlar.",
+        "AnonymizeDataNow": "Seçilmiş site ve zaman aralığındaki geçmiş verileri anonimleştirilsin",
+        "AnonymizeDataConfirm": "Seçilmiş site ve zaman aralığındaki geçmiş verilerini anonimleştirmek istediğinize emin misiniz? Bu işlem geri alınamaz, yapılan isteğe göre bazı veriler silinebilir ve bu işlemin tamamlanması uzun sürebilir.",
         "CurrentDBSize": "Geçerli veritabanı boyutu",
         "DBPurged": "Veritabanı temizlendi.",
         "DeleteBothConfirm": "Hem ham verileri hem de rapor verilerini silmeyi seçtiniz. Bu işlemin sonunda eski istatistik verileriniz kalıcı olarak silinecek ve raporları da yeniden oluşturamayacaksınız. Bu işlemi yapmak istediğinize emin misiniz?",
-        "DeleteDataDescription": "Matomo veritabanının boyutunu küçük tutmak ve Kişisel Verilerin Korunması Kanunu koşullarını sağlamak için eski ham verilerin ve işlenmiş raporların düzenli olarak silinmesini sağlayabilirsiniz.",
+        "DeleteDataDescription": "Matomo veritabanının boyutunu küçük tutmak ve Genel Veri Koruma Yönetmeliği ve Kişisel Verilerin Korunması Kanunu koşullarını sağlamak için eski ham verilerin ve işlenmiş raporların düzenli olarak silinmesini sağlayabilirsiniz.",
         "DeleteDataInterval": "Eski verileri silme sıklığı",
         "DeleteOldVisitorLogs": "Eski ziyaretçi günlüğü kayıtları silinsin",
         "DeleteOldRawData": "Eski ham veriler düzenli olarak silinsin",
@@ -81,10 +85,10 @@
         "EstimatedDBSizeAfterPurge": "Temizklik sonrası öngörülen veritabanı boyutu",
         "EstimatedSpaceSaved": "Öngörülen kazanılacak boyut",
         "GeolocationAnonymizeIpNote": "Not: Coğrafi konum yaklaşık olarak 1 bayt anonim kılma ile aynı sonucu verir. 2 ya da daha fazla bayt ile yapılan anonim kılmalarda coğrafi konum doğruluğu kalmaz.",
-        "GDPR": "GVKY (GDPR)",
+        "GDPR": "Genel Veri Koruma Yönetmeliği",
         "GdprManager": "GVKY Yönetimi",
-        "GdprOverview": "Kişisel Veri Güvenliği Yönergesi Özeti",
-        "GdprTools": "Kişisel Veri Güvenliği Yönergesi Araçları",
+        "GdprOverview": "Genel Veri Koruma Yönetmeliği Özeti",
+        "GdprTools": "Genel Veri Koruma Yönetmeliği Araçları",
         "GetPurgeEstimate": "Temizlik öngörüsünü görüntüle",
         "KeepBasicMetrics": "Temel ölçümler korunur (ziyaretler, sayfa görüntülemeleri, hemen çıkma oranı, hedef tutturma, e-ticarete dönüşme gibi)",
         "KeepDataFor": "Şunun için tüm veriler korunsun",
@@ -107,8 +111,8 @@
         "UseAnonymizedIpForVisitEnrichment": "Ziyaret verilerini zenginleştirirken Anonoimleştirilmiş IP adresleri kullanılsın.",
         "UseAnonymizedIpForVisitEnrichmentNote": "Zİyaretçilerin üst verilerini geliştiren IP adresi ve hizmet sağlayıcıya göre coğrafi konum bulma uygulama ekleri. Varsayılan olarak bu uygulama eklerinde anonim kılınmış IP adresleri kullanılır. Bu seçenek devre dışı bırakıldığında anonim kılınmamış tam IP adresi kullanılır. Bu durum da kişisel gizliliğin korunmasını azaltırken daha doğru konum bilgisi sağlar.",
         "PseudonymizeUserIdNote": "Bu seçenek etkinleştirildiğinde, Kullanıcı Kodu yerine bir sahte bir kod görüntülenerek, e-posta adresi gibi kişisel gizliliğin korunmasını engelleyebilecek bilgilerin görüntülenmesi ve kaydedilmesi engellenir. Teknik olarak Kullanıcı Kodu belirtildiğinde, Matomo karılmış bir işlev ile oluşturulmuş sahte kullanıcı kodunu kullanır.",
-        "PseudonymizeUserIdNote2": "Not: Sahte kod kullanılması anonim kılma ile aynı şey değildir. Kişisel Verilerin Korunması hükümlerine göre Sahte Kullanıcı Kodu da kişisel veri sayılır. Belirli verilere sahip olunması durumunda (yalnız Matomo ve veri işleyiciniz tarafından erişilebilen) Sahte Kullanıcı Kodu kullanılarak Gerçek Kullanıcı Kodu bulunabilir.",
-        "AnonymizeOrderIdNote": "Sipariş Kodu bir e-ticaret mağazası gibi başka bir sistemde referans olarak bulunacağından, Genel Veri Koruma Yönergesi kapsamındaki kişisel bilgilerin elde edilmesinde kullanılabilir. Bu seçenek etkinleştirildiğinde, Sipariş Kodu otomatik olarak anonim kılınır böylece kişisel bilgiler izlenemez.",
+        "PseudonymizeUserIdNote2": "Not: Sahte kod kullanılması anonim kılma ile aynı şey değildir. Genel Veri Koruma Yönetmeliği hükümlerine göre Sahte Kullanıcı Kodu da kişisel veri sayılır. Belirli verilere sahip olunması durumunda (yalnız Matomo ve veri işleyiciniz tarafından erişilebilen) Sahte Kullanıcı Kodu kullanılarak Gerçek Kullanıcı Kodu bulunabilir.",
+        "AnonymizeOrderIdNote": "Sipariş Kodu bir e-ticaret mağazası gibi başka bir sistemde referans olarak bulunacağından, Genel Veri Koruma Yönetmeliği kapsamındaki kişisel bilgilerin elde edilmesinde kullanılabilir. Bu seçenek etkinleştirildiğinde, Sipariş Kodu otomatik olarak anonim kılınır böylece kişisel bilgiler izlenemez.",
         "UseAnonymizeIp": "Ziyaretçinin IP adresi anonim kılınsın",
         "UseAnonymizeTrackingData": "İzleme Verileri Anonim Kılınsın",
         "UseAnonymizeUserId": "Kullanıcı Kodu Anonim Kılınsın",
