--- a/plugins/VisitorInterest/lang/tr.json
+++ b/plugins/VisitorInterest/lang/tr.json
@@ -16,7 +16,7 @@
         "WidgetLengths": "Ziyaret Süreleri",
         "WidgetLengthsDocumentation": "Bu raporda belirli bir sürede yapılan ziyaret sayısı görülebilir. Başlangıçta bu rapor bir etiket bulutu şeklindedir ve sayısı çok olan ziyaretler daha büyük görüntülenir.",
         "WidgetPages": "Ziyaret Başına Sayfa Sayısı",
-        "WidgetPagesDocumentation": "Bu raporda belirli bir sayıda görüntülenen sayfalara yapılan ziyaret sayısı görülebilir. Başlangıçta bu rapor bir etiket bulutu şeklindedir ve sayfa sayısı çok olan ziyaretler daha büyük görüntülenir.",
+        "WidgetPagesDocumentation": "Bu raporda belirli sayıda gösterilen sayfalara yapılan ziyaret sayısı görülebilir. Başlangıçta bu rapor bir etiket bulutu şeklindedir ve sayfa sayısı çok olan ziyaretler daha büyük görüntülenir.",
         "WidgetVisitsByDaysSinceLast": "Son Ziyaretten Bu Yana Geçen Gün Sayısı",
         "WidgetVisitsByDaysSinceLastDocumentation": "Bu raporda ziyaretçilerin son ziyaretinden bu yana belirli sayıda gün geçmiş ziyaret sayısı görülebilir.",
         "WidgetVisitsByNumDocumentation": "Bu raporda web sitenizi en az N kez ziyaret etmiş ziyaretçiler görülebilir."
