--- a/plugins/Diagnostics/lang/en.json
+++ b/plugins/Diagnostics/lang/en.json
@@ -9,6 +9,9 @@
         "HideUnchanged": "If you want to see only changed values you can %1$shide all unchanged values%2$s.",
         "Sections": "Sections",
         "DatabaseReaderConnection": "Database Reader Connection",
+        "DatabaseUtf8Requirement": "This is required to be able to store 4-byte UTF8 characters. Unless utf8mb4 is available special characters, such as emojis, less common characters of asian languages, various historic scripts or mathematical symbols will be replaced with %1$s. You can read more details about this topic in %2$sthis FAQ%3$s.",
+        "DatabaseUtf8mb4CharsetRecommended": "Your database doesn't support utf8mb4 charset yet.",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "Your database supports utf8mb4 charset, but your database tables have not been converted yet. You can do this by executing the command %1$s or activating the automatic conversion in General Settings.",
         "CronArchivingLastRunCheck": "Last Successful Archiving Completion",
         "CronArchivingHasNotRun": "Archiving has not yet run successfully.",
         "CronArchivingHasNotRunInAWhile": "Archiving last ran successfully on %1$s which is %2$s ago.",
