--- a/plugins/CoreUpdater/lang/el.json
+++ b/plugins/CoreUpdater/lang/el.json
@@ -91,6 +91,8 @@
         "YouMustDownloadPackageOrFixPermissions": "Το Matomo δεν μπορεί να αντικαταστήσει την υπάρχουσα εγκατάσταση. Μπορείτε να διορθώσετε τα δικαιώματα πρόσβασης των φακέλων\/αρχείων ή να κατεβάσετε το πακέτο και να εγκαταστήσετε την έκδοση %s χειροκίνητα:",
         "YourDatabaseIsOutOfDate": "Η βάση δεδομένων του Matomo είναι παρωχημένη και πρέπει να αναβαθμιστεί προτού συνεχίσετε.",
         "ViewVersionChangelog": "Δείτε τις αλλαγές για αυτή την έκδοση:",
-        "ReceiveEmailBecauseIsSuperUser": "Λαμβάνετε το e-mail επειδή είστε Υπερ-Χρήστης του Matomo στο: %s"
+        "ReceiveEmailBecauseIsSuperUser": "Λαμβάνετε το e-mail επειδή είστε Υπερ-Χρήστης του Matomo στο: %s",
+        "ConvertToUtf8mb4": "Μετατροπή της βάσης δεδομένων σε κωδικοποίηση χαρακτήρων UTF8mb4",
+        "TriggerDatabaseConversion": "Εκτέλεση της αυτόματης μετατροπής της βάσης στο υπόβαθρο"
     }
 }
