--- a/plugins/DevicesDetection/lang/de.json
+++ b/plugins/DevicesDetection/lang/de.json
@@ -48,6 +48,7 @@
         "TV": "TV",
         "UserAgent": "User-Agent",
         "XVisitsFromDevices": "%1$s Besuche von %2$s Geräten",
+        "Wearable": "Tragbar",
         "WidgetBrowsers": "Besucher-Browser",
         "WidgetBrowsersDocumentation": "Dieser Bericht enthält Informationen über die Browser Ihrer Besucher. Jede Version eines Browsers wird separat aufgelistet."
     }
