--- a/plugins/Diagnostics/lang/el.json
+++ b/plugins/Diagnostics/lang/el.json
@@ -9,6 +9,8 @@
         "HideUnchanged": "Αν επιθυμείτε να δείτε μόνο τις τιμές που άλλαξαν, μπορείτε να %1$sαποκρύψετε τις τιμές που παρέμειναν ίδιες%2$s.",
         "Sections": "Τμήματα",
         "DatabaseReaderConnection": "Σύνδεση Αναγνώστη Βάσης Δεδομένων",
+        "DatabaseUtf8mb4CharsetRecommended": "Η βάση δεδομένων σας δεν υποστηρίζει ακόμη κωδικοποίηση χαρακτήρων UTF8mb4.",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "Η βάση δεδομένων σας υποστηρίζει κωδικοποίηση χαρακτήρων UTF8mb4, αλλά οι πίνακες στη βάση δεν έχουν ακόμη μετατραπεί. Μπορείτε να το κάνετε αυτό εκτελώντας την εντολή %1$s ή ενεργοποιώντας την αυτόματη μετατροπή στις Γενικές Ρυθμίσεις.",
         "CronArchivingLastRunCheck": "Τελευταία Επιτυχής Εκτέλεση Αρχειοθέτησης",
         "CronArchivingHasNotRun": "Η αρχειοθέτηση δεν εκτελέστηκε ακόμη με επιτυχία.",
         "CronArchivingHasNotRunInAWhile": "Η αρχειοθέτηση εκτελέστηκε με επιτυχία στις %1$s που είναι πριν από %2$s.",
