--- a/plugins/Tour/lang/tr.json
+++ b/plugins/Tour/lang/tr.json
@@ -42,7 +42,7 @@
         "CustomiseDashboard": "Panoyu özelleştir",
         "CustomiseDashboardDescription": "Panoya sizin için önemli ölçümleri görüntüleyecek yeni bileşenler ekleyebilirsiniz.",
         "DefineGoal": "Bir hedef ekleyin",
-        "DefineGoalDescription": "Dönüşüm izleme özelliği iş hedeflerinize ulaşmak, yeni hedefler belirlemek, başarımı ölçmek ve değerlendirmek ile dönüşümleri, dönüşüm oranları ve ziyaret başına kar değerlerini nasıl arttırabileceğinizi öğrenmenizi sağlar.",
+        "DefineGoalDescription": "Hedef tutturma izleme özelliği iş hedeflerinize ulaşmak, yeni hedefler belirlemek, başarımı ölçmek ve değerlendirmek ile hedefleri, hedef tutturma oranlarını ve ziyaret başına kar değerlerini nasıl arttırabileceğinizi öğrenmenizi sağlar.",
         "EmbedTrackingCode": "İzleme kodu ekleme",
         "CompletionTitle": "Tebrikler!",
         "CompletionMessage": "Tüm eğitimleri tamamladınız. Gurur duyabilirsiniz.",
