--- a/lang/sq.json
+++ b/lang/sq.json
@@ -210,7 +210,7 @@
         "Export": "Eksporto",
         "ExportAsImage": "Eksportoje si Figurë",
         "ExportThisReport": "Eksportojeni këtë grup të dhënash në formate të tjerë",
-        "Faq": "FAQ",
+        "Faq": "PBR",
         "FileIntegrityWarning": "Kontrolli i pacenueshmërisë së kartelës dështoi dhe dha disa gabime. Duhet ta ndreqni këtë problem dhe mandej të rifreskoni këtë faqe deri sa të mos shfaqë më gabime.",
         "FileIntegrityWarningReupload": "Gabimet më poshtë mund të kenë ardhur nga një ngarkim i pjesshëm ose i dështuar kartelash Matomo.",
         "FileIntegrityWarningReuploadBis": "Provoni të ringarkoni krejt kartelat e Matomo-s në mënyrën DYORE.",
@@ -393,7 +393,7 @@
         "Security": "Siguri",
         "SeeAll": "shihini krejt",
         "SeeTheOfficialDocumentationForMoreInformation": "Për më tepër të dhëna, shihni %1$sdokumentimin zyrtar%2$s.",
-        "SeeThisFaq": "Shihni %1$skëtë FAQ%2$s.",
+        "SeeThisFaq": "Shihni %1$skëto PBR%2$s.",
         "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Përzgjidhni \"Po\", nëse doni të dërgoni, ose keni për të dërguar, email përmes një shërbyesi të emërtuar, në vend se përmes të një funksioni vendor poste",
         "Settings": "Rregullime",
