--- a/plugins/CoreUpdater/lang/tr.json
+++ b/plugins/CoreUpdater/lang/tr.json
@@ -91,6 +91,9 @@
         "YouMustDownloadPackageOrFixPermissions": "Var olan Matomo kopyanızın üzerine yazılamıyor. %s sürümünü kurmak için klasör ve dosya izinlerini düzenleyebilir ya da paketi el ile indirip kurabilirsiniz:",
         "YourDatabaseIsOutOfDate": "Matomo veritabanınız güncel değil. İlerlemeden önce güncellenmesi gerekli.",
         "ViewVersionChangelog": "Bu sürümün değişiklik günlüğüne bakın:",
-        "ReceiveEmailBecauseIsSuperUser": "Bu e-posta %s sunucusundaki Matomo uygulamasının süper kullanıcısı olduğunuz için gönderilmiştir:"
+        "ReceiveEmailBecauseIsSuperUser": "Bu e-posta %s sunucusundaki Matomo uygulamasının süper kullanıcısı olduğunuz için gönderilmiştir:",
+        "ConvertToUtf8mb4": "Veritabanı utf8mb4 karakter kümesine dönüştürülsün",
+        "TriggerDatabaseConversion": "Veritabanı dönüştürme arka planda başlatılsın",
+        "Utf8mb4ConversionHelp": "Veritabanınız henüz utf8mb4 karakter kümesini desteklemiyor. Bu özellik 4 baytlık UTF8 karakterlerini kaydedebilmek için gereklidir. utf8mb4 kullanılabilir olmadan, özel karakterler, duygu ifadeleri (emojiler), asya dillerinde az kullanılan karakterler, çeşitli tarihsel ya da matematiksel simgeler yerine %1$s kullanılır.<br \/><br \/>Veritabanınız utf8mb4 karakter kümesini destekliyor ancak veritabanı tablolarınız henüz dönüştürülmemiş.<br \/><br \/>Komsol komutlarını kullanabiliyorsanız %2$skomutunu yürütmeniz önerilir.<br \/><br \/>Alternatif olarak bu seçeneği etkinleştirerek dönüşümü buradan başlatabilirsiniz. İşlem zamanlanmış görev şeklinde arka planda otomatik olarak başlatılır.<br \/><br \/>Uyarı: Veritabanının dönüştürülmesi boyutuna göre bir kaç saat sürebilir. Bu sırada izleme çalışmayabilir. Büyük Matomo kopyaları için otomatik dönüştürme yapılması önerilmez.<br \/><br \/>Ayrıntılı bilgi almak için %3$ssık sorulan sorular bölümüne%4$s bakabilirsiniz."
     }
 }
