--- a/plugins/Diagnostics/lang/tr.json
+++ b/plugins/Diagnostics/lang/tr.json
@@ -9,6 +9,9 @@
         "HideUnchanged": "Yalnız değiştirilmiş değerlerin görüntülenmesi için %1$sdeğiştirilmemiş tüm değerleri gizleyin%2$s.",
         "Sections": "Bölümler",
         "DatabaseReaderConnection": "Veritabanı Okuyucu Bağlantısı",
+        "DatabaseUtf8Requirement": "Bu özellik 4 baytlık UTF8 karakterlerini kaydedebilmek için gereklidir. utf8mb4 kullanılabilir olmadan, özel karakterler, duygu ifadeleri (emojiler), asya dillerinde az kullanılan karakterler, çeşitli tarihsel ya da matematiksel simgeler yerine %1$s kullanılır. Ayrıntılı bilgi almak için %2$ssık sorulan sorular bölümüne%3$s bakabilirsiniz.",
+        "DatabaseUtf8mb4CharsetRecommended": "Veritabanınız henüz utf8mb4 karakter kümesini desteklemiyor.",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "Veritabanınız utf8mb4 karakter kümesini destekliyor ancak veritabanı tablolarınız henüz dönüştürülmemiş. Bu işlemi %1$s komutunu yürüterek ya da Genel Ayarlar bölümünden otomatik dönüşüm seçeneğini etkinleştirerek yapabilirsiniz.",
         "CronArchivingLastRunCheck": "Son Tamamlanmış Arşivleme İşlemi",
         "CronArchivingHasNotRun": "Henüz tamamlanmış bir arşivleme işlemi yapılmamış.",
         "CronArchivingHasNotRunInAWhile": "Son tamamlanmış arşivleme işlemi %1$s tarihinde %2$s önce yapılmış.",
