--- a/plugins/Goals/lang/tr.json
+++ b/plugins/Goals/lang/tr.json
@@ -115,9 +115,9 @@
         "WhereThe": "şuraya",
         "WhereVisitedPageManuallyCallsJavascriptTrackerLearnMore": "Hedef izlemek için ziyaret edilen sayfada 'trackGoal' işlevini çağıran bir JavaScript kodu bulunmalıdır (%1$sayrıntılı bilgi alın%2$s)",
         "YouCanEnableEcommerceReports": "Bu web sitesi için %2$s sayfasında %1$s kullanabilirsiniz.",
-        "UseEventValueAsRevenue": "Hedef dönüşümü geliri olarak etkinlik değeri (varsa) kullanılsın.",
+        "UseEventValueAsRevenue": "Hedef tutturma geliri olarak etkinlik değeri (varsa) kullanılsın.",
         "GoalRevenue": "Hedef Geliri",
-        "EventValueAsRevenueHelp": "Eşleşen etkinliğin bir geliri varsa ve bu gelir etkinlik değeri olarak izleniyorsa, bu seçeneği etkinleştirerek etkinlik değerinin hedef dönüşüm değeri olarak kaydedilmesini sağlayabilirsiniz. Hedef geliriniz dönüşümlere göre değişmiyorsa bu seçeneği yok sayarak yukarıdaki varsayılan geliri ayarlayabilirsiniz.",
+        "EventValueAsRevenueHelp": "Eşleşen etkinliğin bir geliri varsa ve bu gelir etkinlik değeri olarak izleniyorsa, bu seçeneği etkinleştirerek etkinlik değerinin hedef tutturma değeri olarak kaydedilmesini sağlayabilirsiniz. Hedef geliriniz hedef tutturma ile değişmiyorsa bu seçeneği yok sayarak yukarıdaki varsayılan geliri ayarlayabilirsiniz.",
         "EventValueAsRevenueHelp2": "Not: Hem varsayılan hedef geliri hem de etkinlik değeri belirtilmiş ise etkinlik değeri kullanılır. Bu seçenek etkinleştirilmiş olduğu halde bir istekte herhangi bir etkinlik değeri gönderilmemiş ise (belirtilmiş ise) varsayılan gelir kullanılır.",
         "AtLeastMinutes": "en az %1$s dakika. Saniye belirtmek için ondalık olarak yazın. Örneğin 30 saniye için %2$s.",
         "TimeInMinutes": "Dakika Cinsinden Süre",
