--- a/plugins/PrivacyManager/lang/de.json
+++ b/plugins/PrivacyManager/lang/de.json
@@ -25,12 +25,15 @@
         "AskForConsentStep3DescADesc1": "Sobald ein Benutzer das Einverständnis gibt, können Sie Matomo das Einverständnis merken lassen, indem Sie die einfach folgende Methode einmal aufrufen:",
         "AskForConsentStep3DescADesc2": "Matomo wird sich dann in nachfolgenden Anfragen merken, dass die Benutzerin oder der Benutzer die Einverständniserklärung gegeben hat, indem ein Cookie namens \"consent\" gesetzt wurde. So lange dieses Cookie existiert, wird Matomo wissen, dass die Einverständniserklärung erteilt wurde und wird die Daten automatisch auswerten. Das bedeutet, dass Sie %1$s nur einmal aufrufen müssen, und dass es nicht nötig ist, %2$s auf einer anderen Seite aufzurufen.",
         "AskForConsentStep3DescANote1": "Standardmässig wird das Cookie mit dem Einverständnis für immer gespeichert. Es ist möglich, ein optionales Ablaufdatum für das Benutzereinverständnis zu definieren, mit Hilfe des Aufrufs:",
+        "AskForConsentStep3DescANote2": "Wenn Sie mehrere Unterdomains auf der selben Webseite in Matomo tracken, möchten Sie sicherstellen dass wenn Sie um Einverständnis bitten, der Benutzer das Einverständnis für alle Unterdomains gibt, auf denen Sie Daten sammeln. Wenn der Benutzer nur für eine bestimmte Domain oder Subdomain(s) das Einverständnis gibt, möchten Sie den Bereich der Einverständnis-Cookie-Domain möglicherweise mit Hilfe von 'setCookieDomain' und ‘setCookiePath' einschränken oder erweitern und steuern (lernen Sie mehr dazu in der JavaScript Tracking Anleitung).",
         "AskForConsentStep3DescANote3": "Es ist erforderlich, dass Sie Cookies nicht deaktivieren.",
         "AskForConsentStep3DescB": "B) wenn Sie Ihr eigenes Tool zur Speicherung der Einwilligung verwenden",
         "AskForConsentStep3DescBDesc1": "In einigen Fällen registrieren Sie in Ihrem eigenen System oder CMS, dass der Benutzer das Einverständnis gegeben hat, getrackt zu werden (zum Beispiel wenn Sie Ihr eigenes Cookie zum Speichern des Benutzer-Einverständnisses verwenden). Wenn Sie einmal das Einverständnis des Benutzers erhalten haben, dessen Daten zu verarbeiten, müssen Sie die 'setContentGiven' Methode aufrufen:",
+        "AskForConsentStep3DescBDesc2": "Dies lässt den JavaScript Tracker wissen dass der Benutzer das Einverständnis gegeben hat und stellt sicher dass das Tracking wie erwartet funktioniert. Diese Funktion muss irgendwann nach %1$s aufgerufen werden.",
         "AskForConsentStep3DescBNote1": "wenn Sie %1$s aufrufen, wird Matomo bei nachfolgenden Anfragen nicht registrieren dass dieser Benutzer sein Einverständnis gegeben hat: Es ist wichtig, dass Sie setContentGiven auf jeder Seite aufrufen.",
         "AskForConsentStep3DescBNote2": "Wenn der Benutzer seine Zustimmung gegeben hat, könnten Sie auch den Aufruf von %1$s von vornherein vermeiden.",
         "AskForConsentStep4": "Schritt 4: Benutzer widerruft Zustimmung",
+        "AskForConsentStep4Desc": "Um das Einverständnis zu entfernen muss der Benutzer eine spezifische Aktion ausführen, zum Beispiel: Auf einen Button \"Ich will nicht mehr getrackt werden\" klicken.",
         "AskForConsentStep4DescA": "A) Wenn Sie möchten, dass Matomo sich die Zustimmung merkt",
         "AskForConsentStep4DescADesc": "Wenn die Benutzerin oder der Benutzer erklärt hat dass sie oder er nicht weiter das Einverständnis gibt, müssen Sie die folgende Methode einmal aufrufen:",
         "AskForConsentStep4DescADesc2": "Dies stellt sicher dass das Cookie welches das erteilte Einverständnis enthält gelöscht wird.",
@@ -45,18 +48,24 @@
         "AnonymizeLocation": "Lokalisierung anonymisieren",
         "AnonymizeLocationHelp": "Diese Aktion kann nicht rückgängig gemacht werden. Re-evaluiert den Ort basierend auf die anonymisierte IP (mindestens 2 Byte der IP werden anonymisiert).",
         "AnonymizeUserId": "Benutzer ID mit Pseudonym austauschen",
+        "AnonymizeUserIdHelp": "Wenn Sie diese Option aktivieren, wird die Benutzer-ID durch ein Pseudonym ersetzt, um ein direktes Speichern und Anzeigen von Daten zu vermeiden, die eine persönliche Identifizierung ermöglichen, wie eine E-Mail-Adresse. In technischen Worten: Matomo wird die Benutzer-ID mit Hilfe einer gesalzenen Hashfunktion pseudonymisieren. <br\/><br\/><em>Hinweis: Mit einem Pseudonym ersetzen ist nicht dasselbe wie Anonymisierung. In DSGVO Terminologie: Das Benutzer-ID Pseudonym gilt weiterhin als persönlicher Datenwert. Die Original Benutzer-ID kann immer noch identifiziert werden, wenn zusätzliche Informationen verfügbar sind (auf welche nur Matomo und Ihr Datenprozessor Zugriff haben).<\/em>",
+        "AnonymizeProcessInfo": "Diese Aktion kann lange dauern und wird deshalb nicht sofort ausgeführt. Sie werden in der Lage sein, den aktuellen Status des Prozesses unten zu verfolgen. Die Anonymisierung sollte normalerweise innerhalb einer Stunde starten.",
         "AnonymizeDataNow": "Vergangene Daten für die gewählte Seite und Zeit werden anonymisiert",
+        "AnonymizeDataConfirm": "Sind Sie sicher, dass Sie die Daten für die ausgewählte Webseite(n) und den ausgewählten Zeitbereich anonymisieren wollen? Diese Aktion kann nicht rückgängig gemacht werden, Daten werden wie erwünscht gelöscht und dieser Prozess kann lange dauern.",
         "UnsetVisitColumns": "Besuchsspalten zurücksetzen",
         "UnsetVisitColumnsHelp": "Diese Aktion kann nicht rückgängig gemacht werden. Eine Liste der Datenbankspalten in den Scope Besuchen, welche Sie zurücksetzen wollen. Jeder Wert für diese Spalte wird auf den Standardwert zurückgesetzt. Bitte beachten dass, wenn die gleiche Spalte in der Scope 'Konversion' existiert, diese Spalte ebenfalls gelöscht werden wird",
         "UnsetActionColumns": "Aktionsspalten zurücksetzen",
+        "UnsetActionColumnsHelp": "Diese Aktion kann nicht rückgängig gemacht werden. Eine Liste der Datenbankspalten in der Scope Aktion welche Sie zurücksetzen wollen. Jeder Wert für diese Spalte wird auf den Standardwert zurückgesetzt.",
         "AwarenessDocumentation": "Erkenntnisse & Dokumentation",
         "AwarenessDocumentationIntro": "Informieren Sie Ihre Benutzer deutlich und transparent, und machen Sie Ihren Kollegen bewusst dass Daten gesammelt werden und wie diese verwendet werden:",
         "AwarenessDocumentationDesc1": "Informieren Sie Ihre Besucher mit Hilfe einer deutlichen Datenschutzerklärung immer darüber, dass Sie persönliche Daten sammeln.",
         "AwarenessDocumentationDesc2": "Informieren Sie Ihre Benutzer in Ihrer Datenschutzerklärung darüber, welche Daten Sie sammeln und wie die Daten verwendet werden.",
+        "AwarenessDocumentationDesc3": "Machen Sie Ihrem Team bewusst dass Sie Matomo Analytics verwenden und %1$swelche Daten mit unserer Analyseplattform gesammelt werden%2$s.",
         "AwarenessDocumentationDesc4": "Dokumentieren Sie Ihre Verwendung von Matomo mit Ihrer %1$sInformationsdeklarationsregistrierung%2$s.",
         "CurrentDBSize": "Aktuelle Größe der Datenbank",
         "DataRetention": "Datenaufbewahrung",
         "DataRetentionInMatomo": "Datenaufbewahrung für gespeicherte Daten in Matomo:",
+        "DataRetentionOverall": "Die gesamte Selbstbehaltsquote für Ihre Datenschutzrichtlinie ist die reine Selbstbehaltsquote. Beachten Sie dass aggregierte Berichte auch persönliche Daten enthalten können. Wenn Sie Features wie die Benutzer ID, benutzerdefinierte Variablen, benutzerdefinierte Dimensionen, oder persönliche Daten in andere Form tracken, wie Ereignisse, Seiten-URLs oder Seitentitel usw., dann ist die gesamte Selbstbehaltsquote für Ihre Datenschutzrichtlinie die höhere der beiden.",
         "RawDataRemovedAfter": "Rohdaten aller Besuche und Aktionen werden gelöscht nach %1$s.",
         "RawDataNeverRemoved": "Rohdaten von Besuchen und Aktionen werden <strong>nie<\/strong> gelöscht.",
         "ReportsRemovedAfter": "Alle aggregierten Berichte werden gelöscht nach %1$s.",
@@ -96,11 +105,22 @@
         "GDPR": "DSGVO",
         "GdprManager": "DSGVO Verwaltung",
         "GdprChecklists": "GDPR Checklisten",
+        "GdprChecklistDesc1": "Wenn Sie mit Matomo persönliche Daten europäischer Bürger auswerten, selbst wenn Ihre Firma ausserhalb Europa ansässig ist, müssen Sie die DSGVO-Verpflichtungen erfüllen. Diese Anleitung wird Ihnen dabei helfen.",
+        "GdprChecklistDesc2": "Unten finden Sie unsere Tools welche Ihnen erlauben, die Rechte Ihrer Benutzer zu prüfen, und die Liste der auszuführenden Aktionen um Matomo mit der DSGVO konform zu machen und Ihre Daten zu schützen. Besuchen Sie unsere %1$sDSGVO Benutzeranleitung%2$s um mehr darüber zu erfahren.",
         "GdprOverview": "DSGVO Übersicht",
+        "GdprOverviewIntro1": "Die Datenschutzgrundverordnung (DSGVO) ist eine Vorschrift, welche den Datenschutz für alle Personen innerhalb der Europäischen Union (EU) stärkt und vereinheitlicht.",
+        "GdprOverviewIntro2": "Wenn Sie Schritte unternehmen und sicherzustellen, dass keine persönlichen Daten in Matomo gesammelt werden, wird Sie wahrscheinlich die DSGVO für Matomo (wenn Sie keine IP Adressen tracken, keine Benutzer-IDs, keine Geolokalisierungsdaten, usw.) nicht beunruhigen.",
         "GdprTools": "DSGVO Hilfsmittel",
         "GetPurgeEstimate": "Hochrechnung der Auswirkungen anzeigen",
         "IndividualsRights": "Persönlichkeitsrechte",
+        "IndividualsRightsIntro": "Wahren Sie die Rechte Ihrer Benutzer mit unserer DSGVO-freundlichen Prozedur:",
         "IndividualsRightsInform": "Das Recht informiert zu werden: Informiert Ihre Benutzer mit einer deutlichen Datenschutzerklärung.",
+        "IndividualsRightsAccess": "Das Recht auf Zugriff: %1$sEin Datensubjekt suchen%2$s und all dessen Daten exportieren.",
+        "IndividualsRightsErasure": "Das Recht auf Löschen: %1$sEin Datensubjekt suchen%2$s und einige oder all dessen Daten löschen.",
+        "IndividualsRightsRectification": "Das Recht auf Berichtigung: Sie können %1$sein Datensubjekt suchen%2$s und einige oder all dessen Daten löschen.",
+        "IndividualsRightsPortability": "Das Recht auf Datenübertragbarkeit: %1$sEin Datensubjekt suchen%2$s und all dessen Daten exportieren.",
+        "IndividualsRightsObject": "Das Recht zu widersprechen: %1$sErlaubt Ihren Benutzern, sich von der Datenauswertung auszuschliessen%2$s auf Ihrer Datenschutzrichtlinienseite.",
+        "IndividualsRightsChildren": "Wenn Sie Onlineservice an Kinder offerieren und auf Zustimmung angewiesen sind, dann werden Sie möglicherweise eine elterliche oder Erziehungsberechtigtenzustimmung benötigen, um den gesetzlich vorgegebenen Datenschutz des Kindes zu berücksichtigen.",
         "KeepBasicMetrics": "Behalte Basismetriken (Besuche, Seitenansichten, Absprungrate, Ziel-Konversionen, Ecommerce-Konversionen, etc.)",
         "KeepDataFor": "Behalte alle Daten für",
         "KeepReportSegments": "Für die behaltenen Daten oben, auch segmentierte Berichte behalten",
@@ -141,6 +161,9 @@
         "SecurityProcedures": "Sicherheitsprozeduren",
         "SecurityProceduresIntro": "Informieren Sie Ihre Benutzer deutlich und transparent, und machen Sie Ihren Kollegen bewusst dass Daten gesammelt werden und wie diese verwendet werden:",
         "SecurityProceduresDesc1": "Bestätigen Sie unsere %1$sSicherheitsempfehlungen%2$s um Ihre Matomo Daten sicher zu verwalten.",
+        "SecurityProceduresDesc2": "Stellen Sie sicher, dass Sie einen schriftlichen Vertrag mit der Firma haben, welche Ihnen den Matomo Server oder das Hosting zur Verfügung stellt und %1$sangemessene Schutzmassnahmen bereitstellt werden%2$s.",
+        "SecurityProceduresDesc3": "Matomo in Ihre %1$sDatenschutzverletzungsprozedur%2$s einbinden.",
+        "SecurityProceduresDesc4": "Matomo in Ihre %1$sDatenschutzfolgenabschätzung (DPIA)%2$s einbinden, wenn verfügbar.",
         "TeaserHeader": "Auf dieser Seite können Sie Matomo individuell anpassen, um es konform zur bestehenden Gesetzgebung zu halten, durch: %1$s Anonymisierung der Besucher IP%2$s, %3$s automatisches Entfernen alter Besucherlogdateien aus der Datenbank%4$s, und %5$s anonymisieren von zuvor registrierten rohen Benutzerdaten%6$s.",
         "TeaserHeadline": "Privatsphäreeinstellungen",
         "UseAnonymizedIpForVisitEnrichment": "Benutze die anonymisierte IP-Adresse auch für die Aufbereitung der Besuche.",
