add product view data to visitor details and add suggested segment values

--- a/plugins/Ecommerce/lang/en.json
+++ b/plugins/Ecommerce/lang/en.json
@@ -8,7 +8,7 @@
         "ViewedProductCategory": "Viewed Product Category",
         "ViewedProductName": "Viewed Product Name",
         "ViewedProductPrice": "Viewed Product Price",
-        "ViewedProductSKU": "Product SKU",
+        "ViewedProductSKU": "Viewed Product SKU",
         "SalesBy": "Sales by %s",
         "SalesAdjective": "Sales %s",
         "NumberOfItems": "Number of Items in Cart",
