--- a/plugins/Diagnostics/lang/de.json
+++ b/plugins/Diagnostics/lang/de.json
@@ -9,9 +9,9 @@
         "HideUnchanged": "Falls Sie nur die geänderten Werte einsehen möchten, können Sie %1$salle unveränderten Werte ausblenden%2$s.",
         "Sections": "Sektionen",
         "DatabaseReaderConnection": "Datenbankleserecht-Verbindung",
-        "DatabaseUtf8Requirement": "Dies ist nötig, um 4-Byte UTF8 Zeichen speichern zu können. Wenn utf8mb4 nicht verfügbar ist, werden spezielle Zeichen wie Emojis, selten verwendete Zeichen asiatischer Sprachen, historische Schriftzeichen oder mathematische Symbolere ersetzt mit %1$s. Sie können mehr über dieses Thema in %2$sdiesen FAQ%3$s lesen.",
+        "DatabaseUtf8Requirement": "Dies ist nötig, um 4-Byte UTF8 Zeichen speichern zu können. Wenn utf8mb4 nicht verfügbar ist, werden spezielle Zeichen wie Emojis, selten verwendete Zeichen asiatischer Sprachen, historische Schriftzeichen oder mathematische Symbole mit %1$s ersetzt. Sie können mehr über dieses Thema in %2$sdiesen FAQ%3$s lesen.",
         "DatabaseUtf8mb4CharsetRecommended": "Ihre Datenbank unterstützt den utf8mb4 Zeichensatz noch nicht.",
-        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "  Ihre Datenbank unterstützt den utf8mb4 Zeichensatz, aber Ihre Datenbanktabellen wurden noch nicht konvertiert. Sie können dies nachholen, in dem Sie den Befehl %1$s ausführen oder die automatische Konvertierung in den generellen Einstellungen aktivieren.",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "  Ihre Datenbank unterstützt den utf8mb4 Zeichensatz, aber Ihre Datenbanktabellen wurden noch nicht konvertiert. Sie können dies nachholen, indem Sie den Befehl %1$s ausführen oder die automatische Konvertierung in den generellen Einstellungen aktivieren.",
         "CronArchivingLastRunCheck": "Letzter erfolgreicher Abschluss der Archivierung",
         "CronArchivingHasNotRun": "Die Archivierung wurde noch nicht erfolgreich abgeschlossen.",
         "CronArchivingHasNotRunInAWhile": "Die Archivierung ist zuletzt am %1$s erfolgreich gelaufen, also vor %2$s.",
