--- a/plugins/Diagnostics/lang/el.json
+++ b/plugins/Diagnostics/lang/el.json
@@ -9,6 +9,7 @@
         "HideUnchanged": "Αν επιθυμείτε να δείτε μόνο τις τιμές που άλλαξαν, μπορείτε να %1$sαποκρύψετε τις τιμές που παρέμειναν ίδιες%2$s.",
         "Sections": "Τμήματα",
         "DatabaseReaderConnection": "Σύνδεση Αναγνώστη Βάσης Δεδομένων",
+        "DatabaseUtf8Requirement": "Αυτό απαιτείται για την αποθήκευση χαρακτήρων 4-byte UTF8. Εκτός αν η κωδικοποίηση utf8mb4 δεν είναι διαθέσιμη, ειδικοί χαρακτήρες όπως emoji, λιγότερο συχνοί χαρακτήρες ασιατικών γλωσσών όπως ιστορικοί χαρακτήρες ή μαθηματικά σύμβολα θα αντικαθίστανται από το %1$s. Μπορείτε να δείτε περισσότερες πληροφορίες για το θέμα αυτό στις %2$sΣυχνές Ερωτήσεις-Απαντήσεις%3$s.",
         "DatabaseUtf8mb4CharsetRecommended": "Η βάση δεδομένων σας δεν υποστηρίζει ακόμη κωδικοποίηση χαρακτήρων UTF8mb4.",
         "DatabaseUtf8mb4CharsetAvailableButNotUsed": "Η βάση δεδομένων σας υποστηρίζει κωδικοποίηση χαρακτήρων UTF8mb4, αλλά οι πίνακες στη βάση δεν έχουν ακόμη μετατραπεί. Μπορείτε να το κάνετε αυτό εκτελώντας την εντολή %1$s ή ενεργοποιώντας την αυτόματη μετατροπή στις Γενικές Ρυθμίσεις.",
         "CronArchivingLastRunCheck": "Τελευταία Επιτυχής Εκτέλεση Αρχειοθέτησης",
