--- a/plugins/VisitTime/lang/el.json
+++ b/plugins/VisitTime/lang/el.json
@@ -5,19 +5,19 @@
         "ColumnLocalMinute": "Τοπική ώρα - λεπτό (Έναρξη επίσκεψης)",
         "ColumnServerTime": "Χρόνος διακομιστή",
         "ColumnServerHour": "Ώρα διακομιστή - ώρα",
-        "ColumnVisitEndServerHour": "Ώρα διακομιστή - ώρα (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerMinute": "Ώρα διακομιστή - λεπτό (Τέλος επίσκεψης)",
+        "ColumnVisitEndServerHour": "Ώρα διακομιστή - ώρα (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerMinute": "Ώρα διακομιστή - λεπτό (Χρον. στιγμή τελευταίας ενέργειας)",
         "ColumnVisitStartServerHour": "Ώρα διακομιστή - ώρα (Έναρξη επίσκεψης)",
         "ColumnVisitStartServerMinute": "Ώρα διακομιστή - λεπτό (Έναρξη επίσκεψης)",
-        "ColumnVisitEndServerDate": "Χρόνος διακομιστή - ημερομηνία (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerDayOfMonth": "Χρόνος διακομιστή - ημέρα του μήνα (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerDayOfWeek": "Χρόνος διακομιστή - ημέρα της εβδομάδας (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerDayOfYear": "Χρόνος διακομιστή - ημέρα του έτους (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerQuarter": "Χρόνος διακομιστή - τρίμηνο (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerSecond": "Χρόνος διακομιστή - δευτερόλεπτο (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerWeekOfYear": "Χρόνος διακομιστή - εβδομάδα του έτους (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerMonth": "Χρόνος διακομιστή - μήνας (Τέλος επίσκεψης)",
-        "ColumnVisitEndServerYear": "Χρόνος διακομιστή - έτος (Τέλος επίσκεψης)",
+        "ColumnVisitEndServerDate": "Ώρα διακομιστή - ημερομηνία (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerDayOfMonth": "Ώρα διακομιστή - ημέρα του μήνα (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerDayOfWeek": "Ώρα διακομιστή - ημέρα της εβδομάδας (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerDayOfYear": "Ώρα διακομιστή - ημέρα του έτους (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerQuarter": "Ώρα διακομιστή - τρίμηνο (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerSecond": "Ώρα διακομιστή - δευτερόλεπτο (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerWeekOfYear": "Ώρα διακομιστή - εβδομάδα του έτους (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerMonth": "Ώρα διακομιστή - μήνας (Χρον. στιγμή τελευταίας ενέργειας)",
+        "ColumnVisitEndServerYear": "Ώρα διακομιστή - έτος (Χρον. στιγμή τελευταίας ενέργειας)",
         "ColumnServerMinute": "Ώρα διακομιστή - λεπτό",
         "DayOfWeek": "Ημέρα της εβδομάδας",
         "LocalTime": "Επισκέψεις ανά τοπική ώρα",
