--- a/plugins/VisitTime/lang/sq.json
+++ b/plugins/VisitTime/lang/sq.json
@@ -5,19 +5,18 @@
         "ColumnLocalMinute": "Koha vendore - minutë (Fillim i vizitës)",
         "ColumnServerTime": "Kohë shërbyesi",
         "ColumnServerHour": "Kohë shërbyesi - orë",
-        "ColumnVisitEndServerHour": "Kohë shërbyesi - orë (Fund i vizitës)",
-        "ColumnVisitEndServerMinute": "Kohë shërbyesi - minutë (Fund i vizitës)",
+        "ColumnVisitEndServerHour": "Kohë shërbyesi - orë (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerMinute": "Kohë shërbyesi - minutë (Kohë e veprimit të fundit)",
         "ColumnVisitStartServerHour": "Kohë shërbyesi - orë (Fillim i vizitës)",
         "ColumnVisitStartServerMinute": "Kohë shërbyesi - minutë (Fillim i vizitës)",
-        "ColumnVisitEndServerDate": "Kohë - datë shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerDayOfMonth": "Kohë - datë muaji te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerDayOfWeek": "Kohë - datë jave te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerDayOfYear": "Kohë - datë viti te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerQuarter": "Kohë - katërmujor te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerSecond": "Kohë shërbyesi - sekondë (Fund i vizitës)",
-        "ColumnVisitEndServerWeekOfYear": "Kohë - javë e vitit te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerMonth": "Kohë - muaj te shërbyesi (Fund i vizitës)",
-        "ColumnVisitEndServerYear": "Kohë - vit te shërbyesi (Fund i vizitës)",
+        "ColumnVisitEndServerDate": "Kohë shërbyesi - datë (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerDayOfMonth": "Kohë shërbyesi - ditë e muajit (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerDayOfWeek": "Kohë shërbyesi - ditë e javës (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerDayOfYear": "Kohë shërbyesi - ditë e vitit (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerSecond": "Kohë shërbyesi - sekondë (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerWeekOfYear": "Kohë shërbyesi - javë e vitit (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerMonth": "Kohë shërbyesi - muaj (Kohë e veprimit të fundit)",
+        "ColumnVisitEndServerYear": "Kohë shërbyesi - vit (Kohë e veprimit të fundit)",
         "ColumnServerMinute": "Kohë shërbyesi - minutë",
         "DayOfWeek": "Ditë e javës",
         "LocalTime": "Vizita sipas kohës vendore",
