--- a/plugins/UsersManager/lang/pl.json
+++ b/plugins/UsersManager/lang/pl.json
@@ -12,6 +12,12 @@
         "CreateUser": "Utwórz użytkownika",
         "SaveBasicInfo": "Zapisz Podstawowe Info",
         "AllWebsites": "Wszystkie strony",
+        "LastUsed": "Ostatnio użyty",
+        "AuthTokens": "Tokeny autoryzacyjne",
+        "AuthTokenPurpose": "Do czego wykorzystujesz ten token?",
+        "NoTokenCreatedYetCreateNow": "Nie utworzono jeszcze tokenu, %1$sutwórz nowy teraz%2$s.",
+        "TokenSuccessfullyGenerated": "Token został wygenerowany",
+        "CreateNewToken": "Utwórz nowy token",
         "AnonymousAccessConfirmation": "Zamierzasz przyznać anonimowemu użytkownikowi dostęp 'podgląd' do tego serwisu. To oznacza, że raporty analityczne i informacje o odwiedzających będą publicznie dostępne dla każdego nawet bez loginu. Czy na pewno chcesz kontynuować?",
         "AnonymousUser": "Użytkownik anonimowy",
         "AnonymousUserHasViewAccess": "NOTKA: użytkownik %1$s posiada dostęp %2$s do tej strony.",
@@ -27,6 +33,7 @@
         "Email": "E-mail",
         "EmailYourAdministrator": "%1$sNapisz o tej sytuacji swojemu adminsitratorowi%2$s.",
         "EnterUsernameOrEmail": "Wpisz nazwę użytkownika lub adres e-mail",
+        "ExceptionAccessValues": "Parametr dostęp musi mieć jedną z tych wartości: [%1$s], ustawiono '%2$s'.",
         "ExceptionDeleteDoesNotExist": "Konto takiego użytkownik '%s' nie istnieje, a więc nie może być skasowane.",
         "ExceptionDeleteOnlyUserWithSuperUserAccess": "Usunięcie użytkownika '%s' jest niemożliwe.",
         "ExceptionEditAnonymous": "Konto użytkownika anonimowego nie może być zmienione czy skasowane. Jest stosowane przez Matomo by zdefiniować użytkownika, który się nie loguje. Dla przykładu, możesz uczynić swoje statystyki powszechnie publiczne, udzielając prawa 'podglądu' dla 'anonimowego' użytkownika.",
@@ -48,6 +55,7 @@
         "GiveViewAccess": "Przyznaj podgląd użytkownikowi %1$s",
         "GiveViewAccessTitle": "Przyznaj istniejącemu użytkownikowi dostęp do raportów dla %s",
         "GiveViewAccessInstructions": "Aby przyznać istniejącemu użytkownikowi uprawnienia do %s wprowadź jego nazwę użytkownika lub adres e-mail.",
+        "IfYouWouldLikeToChangeThePasswordTypeANewOne": "Jeśli chcesz zmienić jasło, wpisz nowe. Aby pozostać przy obecnym, pozostaw pole puste.",
         "InjectedHostCannotChangePwd": "Odwiedzasz tą stronę z nieznanego adresu (%1$s). Nie możesz zmienić swojego hasła do czasu rozwiązania tego problemu.",
         "LastSeen": "Ostatnio widziany",
         "MainDescription": "Zdecyduj, którzy użytkownicy mają dostęp do Twoich serwisów. Możesz również przydzielić dostęp do wszystkich serwisów na raz wybierając \"Wszystkie serwisy\" w selektorze serwisów.",
@@ -73,12 +81,18 @@
         "ThereAreCurrentlyNRegisteredUsers": "Obecnie znajduje się %s zarejestrowanych użytkowników.",
         "TokenAuth": "Token autentykacji API",
         "TokenRegenerateTitle": "Regeneruj",
+        "TokensSuccessfullyDeleted": "Wszystkie tokeny zostały usunięte",
+        "TokenSuccessfullyDeleted": "Token został poprawnie usunięty",
+        "DeleteAllTokens": "Usuń wszystkie tokeny",
+        "ExpiredTokensDeleteAutomatically": "Tokeny z ustawioną datą ważności zostaną skasowane automatycznie.",
         "TypeYourPasswordAgain": "Wpisz nowe hasło ponownie.",
+        "TypeYourCurrentPassword": "Wpisz swoje obecne hasło, aby potwierdzić zmianę hasła.",
         "User": "Użytkownik",
         "UserHasPermission": "%1$s obecnie ma dostęp %2$s do %3$s.",
         "UserHasNoPermission": "%1$s obecnie ma %2$s do %3$s",
         "UsersManagement": "Zarządzanie Użytkownikami",
         "UsersManagementMainDescription": "Utworzenie nowych użytkowników lub aktualizacja istniejących. Ponadto możesz ustawić im poziom uprawnień.",
+        "WhenUsersAreNotLoggedInAndVisitPiwikTheyShouldAccess": "Niezalogowani użytkownicy odwiedzający Matomo, powinni zobaczyć",
         "YourUsernameCannotBeChanged": "Twoja nazwa użytkownika nie może być zmieniona.",
         "YourVisitsAreIgnoredOnDomain": "%1$sTwoje odwiedziny są ignorowane przez Matomo na %2$s %3$s (Matomo zignoruje ciasteczka cookie które znajdzie w twojej przeglądarce).",
         "YourVisitsAreNotIgnored": "%1$sTwoje odwiedziny nie będą ignorowane przez Matomo%2$s (Matomo nie odnalazł właściwego dla wykluczenia ciasteczka cookie w twojej przeglądarce).",
