--- a/plugins/VisitTime/lang/pl.json
+++ b/plugins/VisitTime/lang/pl.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "Czas lokalny - minuty (początek wizyty)",
         "ColumnServerTime": "Czas serwera",
         "ColumnServerHour": "Czas serwera - godzina",
+        "ColumnVisitEndServerHour": "Czas serwera - godziny (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerMinute": "Czas serwera - minuty (Czas ostatniej interakcji)",
         "ColumnVisitStartServerHour": "Czas serwera - godzina (początek wizyty)",
         "ColumnVisitStartServerMinute": "Czas serwera - minuty (początek wizyty)",
+        "ColumnVisitEndServerDate": "Czas serwera - data (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerDayOfMonth": "Czas serwera - dzień miesiąca (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerDayOfWeek": "Czas serwera - dzień tygodnia (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerDayOfYear": "Czas serwera - dzień roku (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerQuarter": "Czas serwera - kwartał (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerSecond": "Czas serwera - sekundy (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerWeekOfYear": "Czas serwera - numer tygodnia (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerMonth": "Czas serwera - miesiąc (Czas ostatniej interakcji)",
+        "ColumnVisitEndServerYear": "Czas serwera - rok (Czas ostatniej interakcji)",
         "ColumnServerMinute": "Czas serwera - minuty",
         "DayOfWeek": "Dzień tygodnia",
         "LocalTime": "Odwiedziny według lokalnego czasu",
