Track ecommerce views as new dimensions instead of custom variables (#15999)
* Adds new columns to log_link_visit_action table to track ecommerce view data

* update piwik.js to track ecommerce view s the new way

* Adjust archiving

* update tests

* [TEMP] use php-tracker branch for composer

* Archive custom variables the old way, only if Matomo was installed before 4.0

* add fallback to custom variables to keep bc when replaying old logs

* update some expected test files

* fix jslint errors

* update javascript test

* update dimension names

* updates some expected test files

* add product view data to visitor details and add suggested segment values

* updates some expected test files

* rebuilt piwik.js

* adjust checked version

* update expected ui files

* updates some expected test files

* submodule updates

* apply some review feedback

* Show product views in action tooltips

* updates expected UI files

Co-authored-by: sgiehl <sgiehl@users.noreply.github.com>

--- a/plugins/Ecommerce/lang/en.json
+++ b/plugins/Ecommerce/lang/en.json
@@ -5,6 +5,10 @@
         "Order": "Order",
         "OrderId": "Order ID",
         "Orders": "Orders",
+        "ViewedProductCategory": "Viewed Product Category",
+        "ViewedProductName": "Viewed Product Name",
+        "ViewedProductPrice": "Viewed Product Price",
+        "ViewedProductSKU": "Viewed Product SKU",
         "SalesBy": "Sales by %s",
         "SalesAdjective": "Sales %s",
         "NumberOfItems": "Number of Items in Cart",
